public/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    @apply overflow-hidden;
    @apply bg-cover;
    @apply bg-zinc-800;
    @apply bg-center;
    background-image: url("/api/getRandomBackground");
}

.h-screen {
    height: -webkit-fill-available;
    height: 100vh;
}

